# bevy_raytrace

./: Cargo.toml  README.md
assets/shaders/: clear.wgsl  collect.wgsl  extend.wgsl  generate.wgsl  intersect.wgsl  prepass.wgsl  raytrace.wgsl  shade.wgsl
src/: camera.rs  input.rs  lib.rs  main.rs  plugin.rs  ray_trace_camera.rs  ray_trace_generate.rs  ray_trace_globals.rs  ray_trace_intersection.rs  ray_trace_materials.rs  ray_trace_node.rs  ray_trace_output.rs  ray_trace_pipeline.rs  ray_trace_rays.rs  sphere.rs
